@@ -28,10 +28,9 @@
    #include <wport.h>
    #include <wrectype.h>
    #include <wrecord.h>
-   
-   
  %}
-    
+ 
+/*
     typedef enum
     {
       WARC_UNKNOWN_RECORD = 0,
@@ -138,3 +137,4 @@
                                                 const char * ,
                                                 const unsigned int );
 
+*/
